Provide effective size policy of Layout in its attached properties

The QML Layout, by default, has an effective size policy for shrinking
and expanding. But its attached properties
(Layout.fillHeight/Layout.fillWidth) don't reflect the same.

This patch provides an effective size policy of the Layout in its
corresponding attached properties (Layout.fillWidth/Layout.fillHeight),
and the same has been updated in the documentation.

Fixes: QTBUG-139699
Pick-to: 6.10 6.8 6.5
Change-Id: I133fc8161a321678aaeb160aabf3065112dea32a
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>